# ValidatingCLEO

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  README.md  cog.toml  environment.yml  genindex.html  index.html  objects.inv  references.html  requirements.txt  search.html  searchindex.js  setup.py  sphinx-reading-durations.json
.github/workflows/: CI.yml
_sources/: index.rst.txt
_sources/testcases/: condevap.rst.txt
_sources/usage/: contact.rst.txt  getstart.rst.txt
docs/doxygen/: doxygen.dox
docs/source/: conf.py  index.rst  references.bib  references.rst
docs/source/testcases/: collisions.rst  condevap.rst  motion.rst
docs/source/usage/: getstart.rst  ourdocs.rst
scripts/: build_compile.sh  compile_only.sh  run.sh  run_gpu.sh
scripts/cleo/levante/bash/: build_cleo.sh  compile_cleo.sh  install_yac.sh  run_cleo.sh
scripts/collisions/: initconds.py  initconds_compare_breakup.py  plot_compare_breakup.py  plot_results.py  run_allcollisions.sh  run_compare_breakup.sh
scripts/condevap/: initconds.py  plot_compare_ventilation.py  plot_results.py
scripts/motion/: initconds.py  plot_results.py  plot_results.sh
src/: CMakeLists.txt  __init__.py
src/collisions/: CMakeLists.txt  __init__.py  attrgens_shima2009.py  config.yaml  config_compare_breakup.yaml  initconds.py  initconds_compare_breakup.py  main_constcoalbu_fixednfrags.cpp  main_golovin.cpp  main_long.cpp  main_straub_fixednfrags.cpp  main_straub_schlottke.cpp  main_supplement.hpp  main_testikstraub.cpp  main_testikstraub_fixednfrags.cpp  plot_compare_breakup.py  plot_results.py  probdists_marshallpalmer.py  straub2010_data.py
src/condevap/: CMakeLists.txt  __init__.py  config.yaml  initconds.py  main.cpp  plot_compare_ventilation.py  plot_results.py
src/motion/: CMakeLists.txt  __init__.py  config.yaml  config_with_tvel.yaml  initconds.py  main.cpp  main_with_tvel.cpp  plot_results.py
testcases/: collisions.html  condevap.html  motion.html
tests/: __init__.py  test_101.py
usage/: contact.html  contributing.html  getstart.html  ourdocs.html
